--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # testing
 /coverage
+/tests
 
 # next.js
 /.next/
@@ -29,6 +30,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+firebase-debug.log
+pglite-debug.log
 
 # env files (can opt-in for committing if needed)
 .env*
