--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "firebase": "^12.2.1",
+    "form-data": "^4.0.4",
     "framer-motion": "^12.23.12",
+    "mailgun.js": "^12.0.3",
     "next": "15.5.2",
+    "node-fetch": "^3.3.2",
+    "openai": "^5.20.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
